fix background isses on mobile

--- a/css/nav-footer.css
+++ b/css/nav-footer.css
@@ -104,9 +104,9 @@ footer {
 .bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4, .bgimg-5, .bgimg-6, .bgimg-7, .bgimg-8, .bgimg-9 {
   position: relative;
   background-attachment: fixed;
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
-  background-size:cover;
+  background-size: cover;
 }
 
 .bgimg-1 {
